fix: scrollbar gutter

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,6 +12,16 @@ body {
   display: none;
 }
 
+.drawer-side {
+  scroll-behavior: smooth;
+  scrollbar-gutter: stable;
+  scrollbar-base-color: var(
+    --fallback-b3,
+    oklch(var(--b3) / var(--tw-bg-opacity))
+  );
+  overflow-y: auto;
+}
+
 /** SHIKI  **/
 
 .shiki {
